objects/nFUSE__Transaction_Doc__c.object
<CustomObject>
    <fields>
        <fullName>nFUSE__Attachment__c</fullName>
        <description>A Soft reference to the saved Attachment containing the document.
            The attachment is one of a few ways that the document may be stored in Salesforce and related to the business process and entity.</description>
        <label>Attachment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Content_Document__c</fullName>
        <description>A Soft reference to the saved Content Document containing the document.
            The Content Document is one of a few ways that the document may be stored in Salesforce and related to the business process and entity.</description>
        <label>Content Document</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__DocMan_Template__c</fullName>
        <description>The DocMan Template name for the template forming the placeholder for the document.
            The template is used by nFUSE in the creation of the data supporting the document in Salesforce.</description>
        <label>DocMan Template</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Transaction_Log__c</fullName>
        <description>The Transaction Log on the nFUSE platform records the status and result of
            integration messaging and traffic between nFUSE and third party providers.
            This field refers to the Transaction Log record containing the details of the transmission
            of the document between the third party provider back and nFUSE.</description>
        <label>Transaction Log</label>
        <referenceTo>nFUSE__Transaction_Log__c</referenceTo>
        <relationshipLabel>Transaction Docs</relationshipLabel>
        <relationshipName>Transaction_Docs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nFUSE__View_Report_Link__c</fullName>
        <description>The system uses this field to specify the location to view the report.</description>
        <inlineHelpText>The system uses this field to specify the location to view the report.</inlineHelpText>
        <label>View Report Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Transaction Doc</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Transaction Doc Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Docs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>